force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/vlocity_cmt__StatementLineItem__c.object-meta.xml
<CustomObject>
    <description>Individual line items constituting an account&apos;s statement are imported from the client&apos;s billing system and retained here.</description>
    <label>Statement Line Item</label>
    <nameField>
        <displayFormat>SLI-{000000000}</displayFormat>
        <label>Statement Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>