force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/fields/vlocity_cmt__AccountName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountName__c</fullName>
    <description>DEPRECATED for compatibility with Salesforce Shield.</description>
    <formula>Text(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>