force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/fields/vlocity_cmt__Amount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>