force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/fields/vlocity_cmt__Category__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>Rollover</fullName>
            </value>
            <value>
                <fullName>Message</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>