force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/fields/vlocity_cmt__ExternalID__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ExternalID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>