force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/fields/vlocity_cmt__OneTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OneTime__c</fullName>
    <label>One Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>