force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/fields/vlocity_cmt__RichText__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__RichText__c</fullName>
    <label>Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>