force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/fields/vlocity_cmt__ServiceID__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServiceID__c</fullName>
    <label>Service ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>