force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/fields/vlocity_cmt__ServiceStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServiceStartDate__c</fullName>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>