force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/fields/vlocity_cmt__StatementGroup__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StatementGroup__c</fullName>
    <label>Statement Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>