force-app/main/default/objects/vlocity_cmt__StatementLineItem__c/fields/vlocity_cmt__Usage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Usage__c</fullName>
    <label>Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>